--- a/app/src/main/res/values/splash.xml
+++ b/app/src/main/res/values/splash.xml
@@ -5,12 +5,13 @@
         <item name="splashImage">@null</item>
         <item name="urlEula">file:///android_asset/eula.html</item>
         <item name="urlPrivacy">file:///android_asset/privacy_policy.html</item>
+        <item name="userConsent">ask</item>
 
-        <item name="langPolicy">@string/splashPolicy</item>
-        <item name="langEula">@string/splashEula</item>
-        <item name="langPrivacy">@string/splashPrivacy</item>
-        <item name="langAgree">@string/splashAgree</item>
-        <item name="langPersonalizedAds">@string/splashPersonalizedAds</item>
-        <item name="langNonPersonalizedAds">@string/splashNonPersonalizedAds</item>
+        <item name="langPolicy">@string/splash_policy</item>
+        <item name="langEula">@string/splash_eula</item>
+        <item name="langPrivacy">@string/splash_privacy</item>
+        <item name="langAgree">@string/splash_agree</item>
+        <item name="langPersonalizedAds">@string/splash_personalized_ads</item>
+        <item name="langNonPersonalizedAds">@string/splash_non_personalized_ads</item>
     </style>
 </resources>
