--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -10,24 +10,22 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/nav_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="48dp"
-        app:srcCompat="@mipmap/ic_launcher"
         tools:ignore="ContentDescription" />
 
     <TextView
+        android:id="@+id/nav_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="8dp"
-        android:text="@string/appName"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/nav_subtitle"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/appDescription" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
