--- a/app/src/main/res/layout/policy_browser.xml
+++ b/app/src/main/res/layout/policy_browser.xml
@@ -21,7 +21,7 @@
 
     <WebView
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:id="@+id/policyBrowser"
+        android:id="@+id/policy_browser"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
