--- a/app/src/main/res/values/menu.xml
+++ b/app/src/main/res/values/menu.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="DevelouzMenu">
+        <item name="toolbar">true</item>
+        <item name="icon">@mipmap/ic_launcher</item>
+        <item name="title">@string/app_name</item>
+        <item name="subtitle">@string/menu_subtitle</item>
         <item name="viewItems">@array/ViewItems</item>
         <item name="menuItems">@array/MenuItems</item>
     </style>
@@ -64,8 +69,8 @@
         <item name="title">@string/share</item>
         <item name="icon">@drawable/ic_share</item>
         <item name="menuClass">.menu.ShareApp</item>
-        <item name="dialog">@string/shareDialog</item>
-        <item name="message">@string/shareMessage</item>
+        <item name="dialog">@string/share_dialog</item>
+        <item name="message">@string/share_message</item>
         <item name="visible">true</item>
     </style>
 
@@ -73,7 +78,7 @@
         <item name="title">@string/rate</item>
         <item name="icon">@drawable/ic_rate</item>
         <item name="menuClass">.menu.RateApp</item>
-        <item name="message">@string/rateMessage</item>
+        <item name="message">@string/rate_message</item>
         <item name="visible">true</item>
     </style>
 
@@ -81,10 +86,9 @@
         <item name="title">@string/close</item>
         <item name="icon">@drawable/ic_exit</item>
         <item name="menuClass">.menu.CloseApp</item>
-        <item name="message">@string/closeMessage</item>
+        <item name="message">@string/close_message</item>
         <item name="confirm">true</item>
         <item name="visible">true</item>
     </style>
-
 
 </resources>
