--- a/android/app/src/main/res/layout/splash_screen.xml
+++ b/android/app/src/main/res/layout/splash_screen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.develouz.view.FlatSplash xmlns:android="http://schemas.android.com/apk/res/android"
+<com.develouz.view.FlatSplash
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/splash_screen"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
