--- a/android/app/src/main/res/values/menu.xml
+++ b/android/app/src/main/res/values/menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <array name="ViewItems">
+    <array name="ViewList">
         <item>@style/Google</item>
         <item>@style/LaguWajib</item>
         <item>@style/Bungaku</item>
